hphp/hack/test/typecheck/match_statement/bad/variable_pattern.php
<?hh

<<file:__EnableUnstableFeatures('match_statements')>>

function f(int $v): void {
  match ($v) {
    $i => echo "int $i\n";
  }
}
